<resources>
    <string name="app_name">Wnder</string>

    <!--Multiple usage-->
    <string name="no_connection">No internet connection !</string>
    <string name="no_internet_body">Your internet connection was lost, please try again later</string>
    <string name="guest_not_allowed">Feature not available as Guest user!</string>
    <string name="distance_meter">%1$d m</string>
    <string name="distance_kilometer">%1$d km</string>

    <!--Login Activity Strings-->
...
    <!--Take Picture Strings-->
    <string name="content_descr_picture_taken">Your picture</string>
    <string name="content_descr_take_picture_button">Take picture image button</string>
    <string name="content_descr_upload_button">Upload image button</string>
    <string name="content_descr_activate_tour">Activates tour mode</string>
    <string name="tour_name">Tour name</string>
    <string name="guest_no_upload">Please log in before taking a picture.</string>
    <string name="upload_later">It seems you are not connected to the internet, your uploads will resume once you are connected again.</string>
    <string name="upload_started">Upload started.</string>
    <string name="upload_not_started">Upload failed to start.</string>
    <string name="upload_failed">Upload failed.</string>
    <string name="upload_successful">Your picture was successfully uploaded!</string>
    <string name="validate_tour">Validate tour</string>

    <!--Image From Gallery Strings-->
    <string name="SensorNotAvailableTitle">Sensor not available</string>
    <string name="SensorNotAvailable">The sensor to get information about the phone 3D position is not available. You can\'t access the compass mode.</string>
    <string name="save_to_gallery">Save to gallery</string>
...
