<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/takePictureCoordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TakePictureFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/takePictureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:clickable="true"
        android:contentDescription="@string/content_descr_take_picture_button"
        android:focusable="true"
        android:src="@drawable/ic_baseline_camera_alt_24"
        app:backgroundTint="@color/purple_200" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/uploadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:clickable="true"
        android:contentDescription="@string/content_descr_upload_button"
        android:focusable="true"
        android:src="@drawable/ic_baseline_upgrade_24"
        app:backgroundTint="@color/purple_200" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/takePictureConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.camera.view.PreviewView
            android:id="@+id/previewView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/takenPicture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_descr_picture_taken"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/numberOfPictures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="56dp"
            android:scaleX="3"
            android:scaleY="3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/validateTour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="161dp"
            android:layout_marginEnd="157dp"
            android:layout_marginBottom="224dp"
            android:text="@string/validate_tour"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.543"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/activateTour"
            android:contentDescription="@string/content_descr_activate_tour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_baseline_tour_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:hint="@string/tour_name"
        android:id="@+id/enterName"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="text"
        app:layout_anchor="@+id/takePictureConstraint"
        app:layout_anchorGravity="center" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>