...
        android:id="@+id/profile_page"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/profile_destination"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/take_picture_page"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_camera_alt_24"
        android:title="@string/take_picture_destination"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/guess_page"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_not_listed_location_24"
        android:title="@string/guess_destination"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/history_page"
...
